--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ layout: default
 </style>
 
 <h1>
-    Headline
+    Enhancing In-the-Wild Speech Emotion Conversion with Resynthesis-based Duration Modeling
 </h1>
 
 <p>
@@ -174,7 +174,7 @@ layout: default
 <p>
     Ground-truth Audio: <br>
     <audio id="audioPlayerGT" controls>
-        <source id="audioPlayerGT" src="https://www2.informatik.uni-hamburg.de/sp/audio/publications/asru2025_durmodel/files/msppod/durmodel/gt/msp_podcast_0003_0442.wav" type="audio/wav">
+        <source id="audioSourceGT" src="https://www2.informatik.uni-hamburg.de/sp/audio/publications/asru2025_durmodel/files/msppod/durmodel/gt/msp_podcast_0003_0442.wav" type="audio/wav">
         Your browser does not support the audio element.
     </audio><br>
 
@@ -184,19 +184,19 @@ layout: default
 
     Low Arousal: 1 <span class="reference" data-ref="low-arousal"></span>:<br>
     <audio id="audioPlayerLowArousal" controls>
-        <source id="audioPlayerLowArousal" src="https://www2.informatik.uni-hamburg.de/sp/audio/publications/asru2025_durmodel/files/msppod/durmodel/arous1/msp_podcast_0003_0442.wav" type="audio/wav">
+        <source id="audioSourceLowArousal" src="https://www2.informatik.uni-hamburg.de/sp/audio/publications/asru2025_durmodel/files/msppod/durmodel/arous1/msp_podcast_0003_0442.wav" type="audio/wav">
         Your browser does not support the audio element.
     </audio><br>
 
     Low Arousal: 4 <span class="reference" data-ref="med-arousal"></span>:<br>
     <audio id="audioPlayerMedArousal" controls>
-        <source id="audioPlayerMedArousal" src="https://www2.informatik.uni-hamburg.de/sp/audio/publications/asru2025_durmodel/files/msppod/durmodel/arous4/msp_podcast_0003_0442.wav" type="audio/wav">
+        <source id="audioSourceMedArousal" src="https://www2.informatik.uni-hamburg.de/sp/audio/publications/asru2025_durmodel/files/msppod/durmodel/arous4/msp_podcast_0003_0442.wav" type="audio/wav">
         Your browser does not support the audio element.
     </audio><br>
 
     Low Arousal: 7 <span class="reference" data-ref="high-arousal"></span>:<br>
     <audio id="audioPlayerHighArousal" controls>
-        <source id="audioPlayerHighArousal" src="https://www2.informatik.uni-hamburg.de/sp/audio/publications/asru2025_durmodel/files/msppod/durmodel/arous7/msp_podcast_0003_0442.wav" type="audio/wav">
+        <source id="audioSourceHighArousal" src="https://www2.informatik.uni-hamburg.de/sp/audio/publications/asru2025_durmodel/files/msppod/durmodel/arous7/msp_podcast_0003_0442.wav" type="audio/wav">
         Your browser does not support the audio element.
     </audio>
 </p>
@@ -282,129 +282,24 @@ layout: default
     });
 </script>
 
-<!-- <br>
+<br>
 
 <h2>
-    References
-</h2> -->
+    This website is subsequent work to the following research:
+</h2> 
 
-<!-- <ol id="refList" style="list-style-type: none; padding: 0;"> -->
-    <!-- JavaScript will populate this list -->
-<!-- </ol> -->
-
-<!-- <script>
-    document.addEventListener("DOMContentLoaded", function () {
-        const references = {
-            "convtasnet": "Y. Luo and N. Mesgarani, “Conv-TasNet: Surpassing ideal time–frequency magnitude masking for speech separation,” IEEE/ACM Transactions on Audio, Speech, and Language Processing, vol. 27, no. 8, pp. 1256–1266, 2019.",
-            "cdiffuse": "Y.-J. Lu, Z.-Q. Wang, S. Watanabe, A. Richard, C. Yu, and Y. Tsao, “Conditional diffusion probabilistic model for speech enhancement,” in IEEE International Conference on Acoustics, Speech and Signal Processing, 2022, pp. 7402–7406.",
-            "demucs": "S. Rouard, F. Massa, and A. Défossez, “Hybrid transformers for music source separation,” in IEEE International Conference on Acoustics, Speech and Signal Processing, 2023.",
-            "sgmse": "J. Richter, S. Welker, J.-M. Lemercier, B. Lay, and T. Gerkmann, “Speech enhancement and dereverberation with diffusion-based generative models,” IEEE/ACM Transactions on Audio, Speech, and Language Processing, vol. 31, pp. 2351–2364, 2023.",
-        };
-
-        // Collect keys in order of their appearance, without duplication
-        const referenceElements = document.querySelectorAll('.reference');
-        const orderedKeys = [];
-        referenceElements.forEach(element => {
-            // Split the keys and iterate over them
-            const keys = element.dataset.ref.split(' ');
-            keys.forEach(key => {
-                // Add key if it's not already in the list to maintain first appearance order
-                if (!orderedKeys.includes(key) && references[key]) {
-                    orderedKeys.push(key);
-                }
-            });
-        });
-        let sortedReferences = {};
-        // Populate the sorted references object based on orderedKeys
-        orderedKeys.forEach(key => {
-            if (references[key]) {
-                sortedReferences[key] = references[key];
-            }
-        });
-
-        function changeId(element) {
-            // Change the id of the clicked element to the next one
-            key = element.id.split('-')[1];
-            elem = document.getElementById(`link-${key}`);
-            elem.href = `#${element.id}`;
-        }
-
-        const refList = document.getElementById('refList');
-        const refTotal = Object.keys(sortedReferences).length;
-        const maxWidth = `${Math.ceil(Math.log10(refTotal + 1)) * 10 + 5}px`;
-
-        Object.entries(sortedReferences).forEach(([key, ref], index) => {
-            const refNumber = index + 1;
-            const li = document.createElement('li');
-            li.id = `ref-${refNumber}`;
-            li.style.display = 'flex';
-            li.style.alignItems = 'baseline';
-            li.style.marginBottom = '5px';
-
-            const numberSpan = document.createElement('span');
-            numberSpan.style.fontWeight = 'regular';
-            numberSpan.style.minWidth = maxWidth;
-            numberSpan.style.textAlign = 'right';
-            numberSpan.style.marginRight = '10px';
-            numberSpan.style.whiteSpace = 'nowrap';
-
-            const numberLink = document.createElement('a');
-            numberLink.href = `#cite-${key}-0`; 
-            numberLink.id = `link-${key}`;
-            numberLink.textContent = `[${refNumber}]`;
-            numberLink.style.textDecoration = 'none';
-            numberSpan.appendChild(numberLink);
-
-            const textSpan = document.createElement('span');
-            textSpan.textContent = ref;
-
-            li.appendChild(numberSpan);
-            li.appendChild(textSpan);
-            refList.appendChild(li);
-        });
-
-        referenceCounter = {};
-        // Making In-text references linkable and combine multiple references
-        document.querySelectorAll('.reference').forEach(span => {
-            const keys = span.getAttribute('data-ref').split(' ');
-            const refNumbers = keys.map(key => {
-                const index = Object.keys(sortedReferences).indexOf(key);
-                return index + 1;
-            });
-            keys.forEach((key, i) => {
-                if (referenceCounter[key] >= 0) {
-                    referenceCounter[key]++;
-                } else {
-                    referenceCounter[key] = 0;
-                }
-
-                // Set up string if there are multiple references
-                if (keys.length > 1) {
-                    if (i === 0) {
-                        refText = `[${refNumbers[i]}, `;
-                    } else if (i === keys.length - 1) {
-                        refText = `${refNumbers[i]}]`;
-                    } else {
-                        refText = `${refNumbers[i]}, `;
-                    }
-                // Set up string if there is only one reference
-                } else {
-                    refText = `[${refNumbers[i]}]`;
-                }
-
-                const citeId = `cite-${key}-${referenceCounter[key]}`;
-                const citeLink = document.createElement('a');
-                citeLink.href = `#ref-${refNumbers[i]}`;
-                citeLink.textContent = refText;
-                citeLink.id = citeId;
-                citeLink.style.textDecoration = 'none';
-                citeLink.addEventListener('click', function () {
-                    changeId(this);
-                });
-
-                span.appendChild(citeLink);
-            });
-        });
-
-    });
-</script> -->
+<ol>
+    <li>
+        N. Raj Prabhu, B. Lay, S. Welker, N. Lehmann-Willenbrock and T. Gerkmann, 
+        "EMOCONV-Diff: Diffusion-Based Speech Emotion Conversion for Non-Parallel and in-the-Wild Data," 
+        <i>ICASSP 2024 - 2024 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)</i>, 
+        Seoul, Korea, Republic of, 2024, pp. 11651-11655, 
+        <a href="https://doi.org/10.1109/ICASSP48485.2024.10447372" target="_blank">doi:10.1109/ICASSP48485.2024.10447372</a>.
+    </li>
+    <li>
+        N. Raj Prabhu, N. Lehmann-Willenbrock and T. Gerkmann, 
+        "In-the-wild Speech Emotion Conversion Using Disentangled Self-Supervised Representations and Neural Vocoder-based Resynthesis," 
+        <i>Speech Communication; 15th ITG Conference</i>, Aachen, 2023, pp. 176-180, 
+        <a href="https://doi.org/10.30420/456164034" target="_blank">doi:10.30420/456164034</a>.
+    </li>
+</ol>
