--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ layout: default
 </style>
 
 <h1>
-    Enhancing In-the-Wild Speech Emotion Conversion with Resynthesis-based Duration Modeling
+    Speech Emotion Conversion: Audio Samples with Duration Modeling
 </h1>
 
 <p>
@@ -254,13 +254,13 @@ layout: default
     <div class="inner-container" dir="auto" data-snippet-clipboard-copy-content="{% raw %}@inproceedings{rajprabhu2025durmodel,
     title={Enhancing In-the-Wild Speech Emotion Conversion with Resynthesis-based Duration Modeling},
     author={Raj Prabhu, Navin and de Oliveira, Danilo and Lehmann-Willenbrock, Nale and Gerkmann, Timo},
-    booktitle={IEEE ASRU},
+    booktitle={IEEE Automatic Speech Recognition and Understanding Workshop (ASRU)},
     year={2025}
 }{% endraw %}">
 <pre><code>{% raw %}@inproceedings{rajprabhu2025durmodel,
     title={Enhancing In-the-Wild Speech Emotion Conversion with Resynthesis-based Duration Modeling},
     author={Raj Prabhu, Navin and de Oliveira, Danilo and Lehmann-Willenbrock, Nale and Gerkmann, Timo},
-    booktitle={IEEE ASRU},
+    booktitle={IEEE Automatic Speech Recognition and Understanding Workshop (ASRU)},
     year={2025}
 }{% endraw %}</code></pre>
     </div>
